Create new function and updating SignUp
